name:                language-fortran
version:             0.1.0.0
synopsis:            Fortran parser and language support
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagitj@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Language.Fortran.Parser
  -- other-modules:       
  build-depends:       base ==4.5.*,
                       array
  hs-source-dirs:      src
