name:                language-fortran
version:             0.1.0.0
synopsis:            Fortran parser and language support
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagitj@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable parser
  main-is: ParserTest.hs
  hs-source-dirs: src
  build-depends: base >= 4.0 && < 5,
                 language-fortran

executable lexer
  main-is: LexerTest.hs
  hs-source-dirs: src
  build-depends: base >= 4.0 && < 5,
                 language-fortran


library
  exposed-modules:     Language.Fortran.Parser,
                       Language.Fortran.Lexer
  -- other-modules:       
  build-depends:       base >=4.0 && < 5,
                       array
  hs-source-dirs:      src
  build-tools: alex, happy
