name:                language-fortran
version:             0.2.0.0
synopsis:            Fortran parser and language support
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit, Dominic Orchard
maintainer:          dagitj@gmail.com, dom.orchard@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable parser
  main-is: ParserTest.hs
  hs-source-dirs: src
  build-depends: base >= 4.0 && < 5,
                 haskell-src >= 1.0,
                 language-fortran,
                 syb >= 0.3,
                 array >= 0.4

executable lexer
  main-is: LexerTest.hs
  hs-source-dirs: src
  build-depends: base >= 4.0 && < 5,
                 haskell-src >= 1.0,
                 language-fortran,
                 syb >= 0.3,
                 array >= 0.4

library
  exposed-modules:     Language.Fortran.Parser,
                       Language.Fortran.Lexer,
                       Language.Fortran.Pretty,
                       Language.Fortran
  -- other-modules:       
  build-depends:       base >=4.0 && < 5,
                       syb >= 0.3,
                       haskell-src >= 1.0,		       		 
                       array >= 0.4

  hs-source-dirs:      src
  build-tools: alex, happy
